[package]
name = "name-similarity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"

log = "0.4.17"
env_logger = "0.9.0"

clap = { version = "4", features = ["derive"] }
regex = "1.6.0"
